force-app/main/default/objects/Hospitalisation__c/Hospitalisation__c.object-meta.xml
<CustomObject>
    <label>Hospitalisation</label>
    <nameField>
        <displayFormat>H{00000}</displayFormat>
        <label>Hospitalisation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hospitalisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>