force-app/main/default/objects/Hospitalisation__c/fields/Diet__c.field-meta.xml
<CustomField>
    <fullName>Diet__c</fullName>
    <label>Diet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glutenfree</fullName>
            </value>
            <value>
                <fullName>Vegan,</fullName>
            </value>
            <value>
                <fullName>Vegetarian,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>