force-app/main/default/objects/Hospitalisation__c/fields/Meds_Given__c.field-meta.xml
<CustomField>
    <fullName>Meds_Given__c</fullName>
    <description>Field in which user can provide list of medications given to the patient during hospitalisation</description>
    <label>Meds Given</label>
    <type>TextArea</type>
</CustomField>